*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.28 ===
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.

=== 1.0.27 ===
* Small header updates.

=== 1.0.26 ===
* Updated implementation of fdsync() for Windows.
* Updated definition of LSP_HIDDEN_MODIFIER under Windows.
* Added default definition for PATH_MAX of 4096 if it is missing in <limits.h>.
* Added debug::log_string data structure for easy logging non-char strings.
* Added test build for Windows using MSYS2.
* Reorganized architecture-dependend inline assembly into smaller files.
* Added support of older ARM architectures regardless to atomic operations and
  endian byte swap operations.
* Updated atomic_cas implementation for ARM.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.25 ===
* Added Clang build for the CI.

=== 1.0.24 ===
* Updated headers.

=== 1.0.23 ===
* Added <common/variadic.h> header for support of variadic templates.
* Added <common/singletone.h> header for thread safe initialization of singletone data.
* Updated build scripts.

=== 1.0.22 ===
* Updated build scripts.

=== 1.0.21 ===
* Got rid of the <windows.h> plague header in header files.
* Better workaround for vasprintf function.
* Support for compilation with Clang under AArch64.
* Support for compilation with Clang under ARMv6 and ARMv7.
* Updated build scripts.

=== 1.0.20 ===
* Updated implementation of lsp_finally macro. Now it became debuggable.
* Updated build scripts.

=== 1.0.19 ===
* Updated assembly code for bits.
* Better compatibility with clang (removed 'register' keyword).

=== 1.0.18 ===
* Added lsp_finally macro definition for automatic scope finalizers.
* Changed C++ standard support to at least C++ 11.
* Updated dependencies.
* Updated build scripts.

=== 1.0.17 ===
* Updated build scripts.

=== 1.0.16 ===