@@ -4,6 +4,7 @@
 
 === 1.0.28 ===
 * Removed Makefile.d. Dependencies are now automatically generated at the build stage.
+* Updated build scripts.
 
 === 1.0.27 ===
 * Small header updates.
